xoffice/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: xoffice
  labels:
    app.kubernetes.io/name: xoffice
    app.kubernetes.io/part-of: xoffice
